# galtonBoard

./: .gitignore  CMakeLists.txt  README.md  graphic.py  main.cpp
Entities/: Ball.cpp  Ball.h  Board.cpp  Board.h  Particle.cpp  Particle.h  Peg.cpp  Peg.h
Models/: Model.h  ModelPointParticle.cpp  ModelPointParticle.h
Utils/: Vector.cpp  Vector.h
src/Entities/: Cell.cpp  Cell.h  GaltonProps.h  Mesh.cpp  Mesh.h  Particle.cpp  Particle.h  Types.h
src/Logic/: Exporter.cpp  Exporter.h  RungeKutta.cpp  RungeKutta.h
src/Logic/Engine/: Engine.cpp  Engine.h
src/Logic/Models/: BasicModel.cpp  BasicModel.h  Model.h
src/Utils/: ParticleFactory.cpp  ParticleFactory.h  Random.cpp  Random.h  Range.cpp  Range.h  Vector2D.cpp  Vector2D.h
